--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # OAuth токен для доступа к Яндекс.Диску
-YANDEX_DISK_TOKEN="OAuth y0__xCjgN5JGJzJPSCk4uGpFjCiy82wCCgQhyNOdgjS-Jhd5WzWaNWDklZO"
+YANDEX_DISK_TOKEN="y0__xCjgN5JGJzJPSCk4uGpFjCiy82wCCgQhyNOdgjS-Jhd5WzWaNWDklZO"
 
 # Базовый URL API
 YANDEX_DISK_API_URL="https://cloud-api.yandex.net/v1/disk"
